k8s/app/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: vendix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - name: worker
        image: vendix-api:latest # Uses same builder image
        command: ["./worker"]
